feat: add what you'll learn section and update image alt text

--- a/docs/how-to-guides/deployment/connect-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-domain.mdx
@@ -6,6 +6,11 @@ keywords: ["deploy", "project", "application", "customization", "domain"]
 description: Learn how to connect custom domain to your application in a Webiny project.
 ---
 
+:::tip What you’ll learn
+
+- how to connect custom domain to your project application
+:::
+
 ## Introduction
 
 By default, both **Admin Area** `(apps/admin)` and **Website** `(apps/admin)` React applications are accessible by the CloudFront URL,
@@ -55,7 +60,7 @@ Head over to the details of your CloudFront Distribution and hit **Edit**:
 
 <img
     src={require("./assets/connect-custom-domain/edit-distribution.png").default}
-    alt="AWS Management Console"
+    alt="Edit CloudFront Distribution in AWS Management Console"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -72,7 +77,7 @@ Then type in your new domain name in the **Alternate Domain Names (CNAMEs)** fie
 
 <img
     src={require("./assets/connect-custom-domain/add-domain-name.png").default}
-    alt="AWS Management Console"
+    alt="Add domain name in AWS Management Console"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -90,7 +95,7 @@ Now switch the **SSL Certificate** to **Custom SSL Certificate** and select the 
 
 <img
     src={require("./assets/connect-custom-domain/add-custom-ssl-certificate.png").default}
-    alt="AWS Management Console"
+    alt="Add custom SSL certificate in AWS Management Console"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -109,7 +114,7 @@ After selecting the **SSL Certificate**, scroll down and hit **Yes, Edit** to sa
 
 <img
     src={require("./assets/connect-custom-domain/save-ssl.png").default}
-    alt="AWS Management Console"
+    alt="Save SSL certificate in AWS Management Console"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -122,7 +127,7 @@ Next, head over to the **Behaviors** tab from the top.
 
 <img
     src={require("./assets/connect-custom-domain/behaviours-tab.png").default}
-    alt="AWS Management Console"
+    alt="Behaviour tab for CloudFront Distribution"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -136,7 +141,7 @@ Then select the only one we have and hit **Edit**:
 
 <img
     src={require("./assets/connect-custom-domain/edit-record.png").default}
-    alt="AWS Management Console"
+    alt="Edit default record"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
@@ -149,7 +154,7 @@ Then switch the **Viewer Protocol Policy** to **Redirect HTTP to HTTPS**. And sc
 
 <img
     src={require("./assets/connect-custom-domain/check-redirect.png").default}
-    alt="AWS Management Console"
+    alt="Check HTTP to HTTPS redirect"
     style={{ borderRadius: 0, marginBottom: 24 }}
 />
 
