feat: update text

--- a/docs/how-to-guides/deployment/connect-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-domain.mdx
@@ -19,14 +19,15 @@ which is fine for development purposes, however, for the production environment 
 Why? Because, custom domains are human-readable, easy to remember, and good for branding.
 
 In this guide, we show how to add a custom domain to the **Admin Area** `(apps/admin)` React application,
-however, the same steps can be used for connecting the **Website** `(apps/admin)` React application.
+however, the same steps can be used for connecting it to the **Website** `(apps/admin)` React application.
 
 We use the [`AWS Management Console`](https://console.aws.amazon.com) throughout this guide to perform the required steps.
 
 :::info
 Make sure you are logged in into the [`AWS Management Console`](https://console.aws.amazon.com) with the same account (profile)
 that you have used to create the Webiny project.
-Learn more about using [`AWS profies`](/docs/how-to-guides/deployment/aws/use-aws-profiles).
+
+Read more about using [`AWS profies`](/docs/how-to-guides/deployment/aws/use-aws-profiles) in a Webiny project.
 :::
 
 ## Before We Begin
@@ -101,7 +102,7 @@ Now switch the **SSL Certificate** to **Custom SSL Certificate** and select the 
 
 <!-- vale on -->
 
-:::info I don't have an SSL certificate?
+:::info Don't have an SSL certificate?
 If you don't have an **SSL certificate**, you can request one by clicking *Request or Import a Certificate with ACM* button as shown.
 
 Learn more about AWS Certificate Manager (ACM) in the official [AWS documentation article](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html).
