fix: update API security article

--- a/docs/key-topics/security-framework/introduction.mdx
+++ b/docs/key-topics/security-framework/introduction.mdx
@@ -15,7 +15,7 @@ description: Learn how security works in Webiny.
 
 Before we can talk about Webiny Security Framework, we need to explain a few key terms that are constantly used when talking about security in general. You're most likely already familiar with some of them, but let's quickly go over these terms, in case you're new to the world of security.
 
-## What's Authentication?
+## Authentication
 
 Authentication is a process in which the application attempts to verify the credentials provided by the client (e.g., a browser, a mobile app, or another application), and retrieves identity information using those verified credentials.
 
@@ -23,17 +23,17 @@ Credentials can be a combination of a username and a password, a [JWT token](htt
 
 Once the identity is established, your application will usually keep that information available for the rest of the system to use, for the duration of that particular request.
 
-## What's an Identity?
+## Identity
 
 An identity is a _verified_ piece of information that tells us _who_ is accessing your application. As we already established in the previous section, identity is determined in the authentication process. However, not every interaction with your application requires identity information. Thus, it's also acceptable for a request to be anonymous.
 
 As an example of anonymous requests, let's pretend your API is exposing a publicly accessible endpoint to fetch published pages, or weather information. That public endpoint doesn't need to know anything about the client in order to return the data. Requests to these public endpoints won't need to go through authentication process and, thus, don't need to have any credentials.
 
-## What's Authorization?
+## Authorization
 
 Authorization is a process of determining if the current identity is allowed to perform the requested action. During request processing, your application can execute authorization many times. Different parts of the application will use different rules to determine if the requested action is allowed. These rules are called _permissions_.
 
-## What's a Permission?
+## Permission
 
 A permission is a set of rules which describe what the identity can or cannot do. In case of Webiny, it's a simple object that contains a _name_ and additional optional properties that are relevant to the business logic of your application.
 
