fix: remove a link from FAQ

--- a/docs/key-topics/security-framework/api-security.mdx
+++ b/docs/key-topics/security-framework/api-security.mdx
@@ -130,7 +130,7 @@ If everything goes well, and your identity has the permissions to execute the re
 
 ### Where and how do I store permissions?
 
-Since authorization plugins are asynchronous, you can store your permissions anywhere, even on remote services. You can also generate permissions dynamically based on some identity information. As long as you can provide an array of [permissions](/docs/key-topics/security-framework/introduction#whats-a-permission) back to the security framework, everything will work smoothly.
+Since authorization plugins are asynchronous, you can store your permissions anywhere, even on remote services. You can also generate permissions dynamically based on some identity information. As long as you can provide an array of permissions back to the security framework, everything will work smoothly.
 
 ### Can I use the default user management implementation for my custom apps?
 
