fix: update as per the feedback

--- a/docs/how-to-guides/development/integrations/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/development/integrations/integrate-tailwindcss.mdx
@@ -14,7 +14,7 @@ description: Learn how to integrate tailwindcss in your Webiny project.
 ## Overview
 
 [Tailwind CSS](https://tailwindcss.com/) is a popular utility-first CSS framework.
-It allows us to quickly build user interfaces with the help of a plethora of built-in CSS classes, without ever leaving our HTML.
+It allows us to quickly build user interfaces with the help of a plethora of built-in CSS classes and without ever leaving our HTML.
 
 In this guide, we show how you can integrate Tailwind CSS into your Webiny project.
 
@@ -25,18 +25,18 @@ The code that we will cover in this guide can also be found in our GitHub [examp
 ## Setting Up Tailwind CSS
 
 ### Install Tailwind CSS via Yarn
-Install `tailwindcss` and its peer-dependencies using yarn by running the following command from root of your project:
+Install `tailwindcss` package and its peer-dependencies using yarn, by running the following command from root of your project:
 
 ```
 yarn add -D tailwindcss@npm:@tailwindcss/postcss7-compat^2.1.2 postcss@^7 autoprefixer@^9
 ```
 :::info
-Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't support PostCSS 8 yet so you need to install the [Tailwind CSS v2.0 PostCSS 7 compatibility](https://tailwindcss.com/docs/installation#post-css-7-compatibility-build) build for now as shown above.
+Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't support PostCSS 8 yet. So, we'll need to install the [Tailwind CSS v2.0 PostCSS 7 compatibility](https://tailwindcss.com/docs/installation#post-css-7-compatibility-build) build for now as shown above.
 :::
 
 ### Add Tailwind CSS to Webpack Configuration
 
-In this guide, we integrate Tailwind CSS in the **Website** project application's React application `(apps/website)`.
+In this guide, we integrate Tailwind CSS with the React application that's located within the **Website** project application.
 But, you can use the same approach for other Webiny applications or a custom application for that matter.
 
 :::info
@@ -45,7 +45,7 @@ Learn more about project applications and packages in the [Project Applications 
 
 We need to add the Tailwind CSS to the `postcss` plugins inside the Webpack configuration of the application.
 
-Every Webiny application has a `webiny.config.ts` file that exports the often used development-related commands.
+Every package in a Webiny application has a `webiny.config.ts` file that exports the often used development-related commands.
 In the case of **Website**`(apps/website)` it contains the following commands:
 - `start` to start the application
 - `build` to build the application
@@ -75,7 +75,7 @@ As you can see in the above file, we export an object with `commands.start` and 
 
 We use `startApp` and `buildApp` helper functions that we imported from `"@webiny/project-utils"` in `commands.start` and `commands.build` respectively.
 
-Both, `startApp` and `buildApp` function, takes two arguments: `options` and `context`.
+Both, `startApp` and `buildApp` function, take two arguments: `options` and `context`.
 
 You can pass a function named `webpack` to this `options` object. It receives `config` as the single argument and should return the new config for Webpack.
 We will make use of this function to add Tailwind CSS support in our Webpack configuration:
@@ -196,7 +196,7 @@ module.exports = require("../../../tailwind.config");
 
 ### Include Tailwind CSS in Your SCSS
 Now it's time to include the Tailwind CSS directives in your styles.
-As most of the styles for Webiny applications are present in `apps/theme` package, we also include tailwind styles there.
+As most of the styles for Webiny applications are present in `apps/theme` package, we also include Tailwind CSS styles there.
 
 Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind CSS `base`, `components`, and `utilities` styles as shown below:
 
@@ -215,7 +215,7 @@ That's all! Now, when you start your **Website** `(apps/website)` React applicat
 yarn start --env=local
 ```
 
-or build it (which happens automatically for you when you deploy your application using `webiny deploy` command)
+Or build it (which happens automatically for you when you deploy your application using `webiny deploy` command):
 
 ```
 yarn build --env=<YOUR_ENV>
@@ -224,8 +224,7 @@ Tailwind CSS is ready to use in your Webiny project.
 
 ### Use Tailwind CSS in Website
 
-Now, you're all set to use the Tailwind CSS in your **Website** `(apps/website)` React application,
-let's try adding an example section made with Tailwind CSS as shown below:
+Now that we've completed the above steps, let's try adding an example section made with Tailwind CSS as shown below:
 
 ```tsx title="apps/website/code/src/ExampleMadeWithTailwindCSS.tsx"
 import React from "react";
@@ -263,7 +262,7 @@ const ExampleMadeWithTailiwindCSS = () => {
 
 export default ExampleMadeWithTailiwindCSS;
 ```
-For demonstration purpose, let's add this example component to the `App.tsx` file as shown below:
+For demonstration purposes, let's render our newly created React component inside the `App` component:
 
 ```tsx title="apps/website/code/src/App.tsx" {3,9}
 import React from "react";
@@ -285,7 +284,7 @@ export const App = () => (
 
 ```
 
-And, this is how it looks in the browser:
+If we did everything correctly, at the top of the page, we should be able to see the new section we just created:
 
 <!-- vale off -->
 
@@ -300,10 +299,12 @@ And, this is how it looks in the browser:
 
 ## FAQ
 
-#### Can I include the Tailwind CSS directives in Website `(app/website)` React application directly?
+#### Can I include Tailwind CSS directives in Website `(app/website)` React application directly?
 
-Yes, you can include the directives directly in the style file of in React application.
-We choose the `apps/theme` package in the guide because it's being used in all React applications of a Webiny project, as a result, we don't have to include these directives in every React application.
+Yes, you can include the directives directly in the main style file of your React application. For example,
+you can directly add the directives to `(apps/website/code/src/App.scss)` file for the **Website** application.
+
+We chose to include it in the `apps/theme` package for guide because it's being used in all React applications of a Webiny project. As a result, we don't have to include these directives in every React application.
 
 #### Why are we not using Webpack v5 in a Webiny project?
 
