feat: add react security article

--- a/docs/key-topics/security-framework/api-security.mdx
+++ b/docs/key-topics/security-framework/api-security.mdx
@@ -24,7 +24,9 @@ This article uses terms like authentication, authorization, identity, and permis
 
 :::
 
-WSF itself, just as any other Webiny application, is a collection of plugins. When these plugins are registered into the application, WSF hooks into some request lifecycle hooks. By doing so, it adds new tools and introduces new hooks to allow developers write plugins for them. The term _hook_ is just used to denote that, at a certain point in time, plugins of that type will be processed (e.g., `context` hook means that plugins of type `context` will be processed).
+WSF itself, just as any other Webiny application, is a collection of plugins. When these plugins are registered into the application, WSF hooks into some request lifecycle hooks. By doing so, it adds new tools and introduces new hooks to allow developers write plugins for them. 
+
+The term _hook_ is just used to denote that, at a certain point in time, plugins of that type will be processed (e.g., `context` hook means that plugins of type `context` will be processed).
 
 ## Request Lifecycle
 
