fix: add conclusion and a note for links

--- a/docs/key-topics/security-framework/react-security.mdx
+++ b/docs/key-topics/security-framework/react-security.mdx
@@ -15,7 +15,7 @@ import reactIdPAPI from "../assets/security-framework/react-idp-api.png";
 
 :::
 
-:::note Important
+:::caution Important
 This article is a continuation of the previous two articles about Webiny Security Framework. If you haven't already, please do read the [Introduction](/docs/key-topics/security-framework/introduction) and [API Security](/docs/key-topics/security-framework/api-security) articles before continuing.
 :::
 
@@ -106,3 +106,11 @@ export default () => {
   return <div>Your recipe!</div>;
 };
 ```
+
+## Conclusion
+
+React applications load user permissions from the API, meaning they share the same permission objects. Handling of login is the responsibility of each individual React application and can be implemented in a number of ways, depending on your project requirements. 
+
+The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your IdPs JWT token and load identity's permissions.
+
+TODO: Add links to tutorials on securing your app.
