fix: remove TODO comments and add missing acronym explanation

--- a/docs/key-topics/security-framework/react-security.mdx
+++ b/docs/key-topics/security-framework/react-security.mdx
@@ -59,7 +59,7 @@ used in custom applications.
 
 Let's assume that you've configured your IdP and you have your custom query to fetch user's information for your React application. Now you need to share the identity and permissions with the rest of the application (to render user menu, avatar, show/hide parts of the UI depending on user's permissions, etc.).
 
-For these purposes, WSF provides a `SecurityProvider` component which holds your identity information and allows other parts of the application to use it using a dedicated `useSecurity()` hook. Here's a simplified React application to visualize the component hierarchy:
+For these purposes, WSF (Webiny Security Framework) provides a `SecurityProvider` component which holds your identity information and allows other parts of the application to use it using a dedicated `useSecurity()` hook. Here's a simplified React application to visualize the component hierarchy:
 
 ```tsx
 import { SecurityProvider } from "@webiny/app-security";
@@ -111,6 +111,4 @@ export default () => {
 
 React applications load user permissions from the API, meaning they share the same permission objects. Handling of login is the responsibility of each individual React application and can be implemented in a number of ways, depending on your project requirements. 
 
-The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your IdPs JWT token and load identity's permissions.
-
-TODO: Add links to tutorials on securing your app.
+The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your JWT token and load identity's permissions.
