fix: add link to ci-cd guides

--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -11,9 +11,9 @@ description: Learn how to establish a CI/CD pipeline for your Webiny project.
 - get an overview of different CI/CD phases
 :::
 
-<!-- :::info
-This article contains a more general information on what CI/CD is and its main phases. For more practical information and tips on how to set up a CI/CD workflow for your Webiny project, visit the [CI/CD How-To Guide](/docs/how-to-guides/ci-cd/introduction).
-::: -->
+:::info
+This article contains a more general information on what CI/CD is and its main phases. For more practical information and tips on how to set up a CI/CD workflow for your Webiny project, check out the [CI/CD](/docs/how-to-guides/ci-cd/introduction) how-to guides.
+:::
 
 ## What is CI/CD?
 
