--- a/docs/how-to-guides/ci-cd/use-the-cicd-scaffold.mdx
+++ b/docs/how-to-guides/ci-cd/use-the-cicd-scaffold.mdx
@@ -1,15 +1,16 @@
 ---
-id: ci-cd
-title: CI/CD
-sidebar_label: CI/CD
-keywords: ["webiny", "continuous", "integration", "delivery"]
+id: use-the-cicd-scaffold
+title: Use CI/CD Scaffold
+sidebar_label: Use CI/CD Scaffold
+keywords: ["webiny", "continuous", "integration", "delivery", "ci", "cd", "scaffold"]
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
 
 :::tip What you'll learn
+
 - one
 - two
-:::
+  :::
 
 ## What is CI/CD?
 
@@ -42,8 +43,8 @@ The workflow we examine in the following text consist of the following steps:
 
 1. Developer creates a branch from the base development branch (`dev`)
 
-
 ####
+
 In a single development cycle (sprint), developers always start off by branching from the default branch, which is `dev`. They also submit PRs to it.
 
 <!-- vale off -->
@@ -72,7 +73,6 @@ Step 3
 In the staging branch, if all tests are passing and everything is in order, code is merged into the uat branch, and tested again. If new issues are detected, we are taking a step back, and returning to the staging branch procedure (step 2). So, again, we’re creating new PRs against it, merging it, and again, merging everything to uat.
 
 Finally, if everything is in order, the code is merged into the prod branch.
-
 
 ## AWS Accounts
 
