feat: create workflows and testing guides

--- a/docs/how-to-guides/ci-cd/environments.mdx
+++ b/docs/how-to-guides/ci-cd/environments.mdx
@@ -9,6 +9,13 @@ description: Learn how to organize different deployment environments for your pr
 :::tip What you'll learn
 
 - how to organize different environments for your project
+
+:::
+
+:::info
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
 :::
 
 ## Introduction
@@ -107,6 +114,16 @@ A system used by real users. Must be in a state that is considered as stable, as
 
 With shared environments, developers deploy their own environments, where, as mentioned, they develop and test bug fixes and new features. Usually, one environment per developer is enough. If the environment is not needed anymore, it's recommended it's destroyed.
 
+## Cloud (AWS) Accounts
+
+In terms of cloud (AWS) accounts, it has been shown that a good practice to adopt is having a separate account for every shared environment and developer in the organization. For example, if our organization consisted of five developers, with the three `dev`, `staging`, and `prod` shared environments, that would be eight cloud accounts in total.
+
+For easier management, we recommend checking out [AWS Organizations](https://aws.amazon.com/organizations/):
+
+> AWS Organizations helps you centrally manage and govern your environment as you grow and scale your AWS resources.
+
+The shared environments AWS accounts will mostly be used from your CI/CD pipeline, which we cover in one of the following sections.
+
 ## FAQ
 
 #### Can we have more shared environments?
@@ -116,7 +133,3 @@ Yes. The `dev`, `staging`, and `prod` is the minimum we recommend, but you can h
 #### Are the names of environments fixed in any way?
 
 Environment names are not fixed or hard-coded in any way. We use `dev`, `staging`, and `prod` as these names are often familiar to developers. Feel free to name these differently if your organization follows different conventions.
-
-#### For deploying into multiple environments, do we use a single or multiple AWS accounts?
-
-Best practice is to use multiple AWS accounts. More on this topic can be founds in the [CI/CD](#) guide.
