--- a/docs/how-to-guides/ci-cd/introduction.mdx
+++ b/docs/how-to-guides/ci-cd/introduction.mdx
@@ -2,11 +2,21 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["development", "workflows", "introduction", "ci", "cd", "serverless", "cloud", "infrastructure"]
+keywords:
+  ["development", "workflows", "introduction", "ci", "cd", "serverless", "cloud", "infrastructure"]
 description: Introduction to development workflows guides section.
 ---
+
 :::tip What you'll learn
+
 - what are the most common pieces of which the application development process consists of
+
+:::
+
+:::info
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
 :::
 
 ## Overview
@@ -17,10 +27,15 @@ The process of application development is much more than just writing applicatio
 - deployment into multiple environments
 - organizing code in multiple VCS branches
 - choosing the right cloud infrastructure resources for the job
-- CI/CD
 - storing and managing cloud infrastructure state files
 - security
 - monitoring and observability <!-- (https://thenewstack.io/monitoring-vs-observability-whats-the-difference/) -->
 - team organization
 
-In the following sections, we cover some of these subprocesses and provide best practices around how to structure and implement them.
+In the following sections, we cover some of these subprocesses and provide best practices around how to structure and implement them, within your CI/CD workflow.
+
+:::info
+
+If you'd like to learn more about the CI/CD practice in general and all of the different phases it consists of, check out the [CI/CD](/docs/key-topics/ci-cd) key topic.
+
+:::
