--- a/docs/how-to-guides/ci-cd/use-the-cicd-scaffold.mdx
+++ b/docs/how-to-guides/ci-cd/use-the-cicd-scaffold.mdx
@@ -6,78 +6,15 @@ keywords: ["webiny", "continuous", "integration", "delivery", "ci", "cd", "scaff
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
 
+:::info Can I use this?
+
+This feature is available since **v5.7.0**.
+
+:::
+
 :::tip What you'll learn
 
 - one
 - two
-  :::
 
-## What is CI/CD?
-
-**Continuous Integration (CI)** is a development practice where developers integrate code into a shared repository frequently, preferably several times a day. Each integration can then be verified by an automated build and automated tests. While automated testing is not strictly part of CI it is typically implied.
-
-**Continuous deployment (CD)** is a software development practice where code changes are automatically prepared for a release to production.
-
-Note that the **CD** abbreviation can also stand for **continuous delivery**, which also entails continuous deployment of your project, only in a [more manual fashion](https://en.wikipedia.org/wiki/Continuous_delivery):
-
-> Continuous delivery is the ability to deliver software that can be deployed at any time through manual releases; this is in contrast to continuous deployment which uses automated deployments.
-
-:::info
-In the rest of this guide, when mentioning the **CI** abbreviation, we're explicitly referring to the **continuous deployment**.
 :::
-
-## The Workflow
-
-<!-- vale off -->
-
-<img
-  src={require("./assets/cicd_infinity.png").default}
-  className="no-shadow"
-  style={{ marginBottom: 20 }}
-  alt="Webiny Cloud Infrastructure - Environments"
-/>
-
-<!-- vale on -->
-
-The workflow we examine in the following text consist of the following steps:
-
-1. Developer creates a branch from the base development branch (`dev`)
-
-####
-
-In a single development cycle (sprint), developers always start off by branching from the default branch, which is `dev`. They also submit PRs to it.
-
-<!-- vale off -->
-
-<img
-  src={require("./assets/cicd_1_branches_prs.png").default}
-  className="no-shadow"
-  style={{ marginBottom: 20 }}
-  alt="Webiny Cloud Infrastructure - Environments"
-/>
-
-<!-- vale on -->
-
-Step 2
-Once all of the PRs for the current development cycle have been merged and tested, the dev branch is merged into staging, and further testing begins by the rest of the team.
-
-If issues are found while testing, new PRs are created, and in terms of their target branch, there are two ways we can go about it.
-
-Step 2.1
-The first approach is choosing the staging as the target branch, and when ready, merging fixes into it. This means the code changes are not present in the dev branch, so, once the complete merge flow is complete, we merge all of the changes merged to the staging branch back into dev. This step can probably be automated via a custom CI/CD script.
-
-Step 2.2
-Instead of just choosing the staging as the target branch, you can also create another PR against the dev branch. This way you don’t have to merge all of the changes after the release is done, but we do it immediately instead.
-
-Step 3
-In the staging branch, if all tests are passing and everything is in order, code is merged into the uat branch, and tested again. If new issues are detected, we are taking a step back, and returning to the staging branch procedure (step 2). So, again, we’re creating new PRs against it, merging it, and again, merging everything to uat.
-
-Finally, if everything is in order, the code is merged into the prod branch.
-
-## AWS Accounts
-
-In terms of AWS accounts, the usual practice is for each shared environment and developer to have its own AWS account. For easier management, we recommend checking out [AWS Organisations](https://aws.amazon.com/organizations/):
-
-> AWS Organizations helps you centrally manage and govern your environment as you grow and scale your AWS resources.
-
-As mentioned, the shared environment AWS accounts will mostly be used from your CI/CD pipeline, which we cover in one of the following sections.
