--- a/docs/how-to-guides/ci-cd/version-control.mdx
+++ b/docs/how-to-guides/ci-cd/version-control.mdx
@@ -7,7 +7,15 @@ description: Learn about the most commonly used branching strategy that you can 
 ---
 
 :::tip What you'll learn
+
 - how to organize your Git repository
+
+:::
+
+:::info
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
 :::
 
 ## Overview
@@ -30,7 +38,7 @@ When working with GitHub, there are a couple of different workflows that you can
 
 > GitHub flow is a lightweight, branch-based workflow that supports teams and projects where deployments are made regularly.
 
-Essentially, developers first create a branch from one of the long-lived development base branches, in which they perform necessary code changes. Once ready, a pull request (PR) is created, which initiates the review process made by other team members and in almost all cases triggers different application tests. If all code changes are in order, the pull request is accepted, or in other words, the changes are merged back into the base branch.
+Essentially, developers first create a branch from one of the long-lived development base branches, in which they perform necessary code changes. Once ready, a [pull request (PR)](https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/about-pull-requests) is created, which initiates the review process made by other team members and in almost all cases triggers different application tests. If all code changes are in order, the pull request is accepted, or in other words, the changes are merged back into the base branch.
 
 <!-- vale off -->
 
