--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -29,9 +29,9 @@ Note that the **CD** abbreviation can also stand for **continuous delivery**, wh
 In the rest of this guide, when mentioning the **CD** abbreviation, we're explicitly referring to the **continuous deployment**.
 :::
 
-## The Workflow
+## Different Phases
 
-In general, the CI/CD workflow consists of a couple of phases:
+In general, the CI/CD workflow, sometimes also referred to as a release cycle, consists of a couple of phases:
 
 <!-- vale off -->
 
