--- a/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
@@ -14,6 +14,12 @@ description: Learn what are cloud infrastructure state files and how to properly
 
 :::
 
+:::info
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
+:::
+
 ## Cloud Infrastructure State Files
 
 In order to bring your project into existence, you need to deploy your application code, along with the necessary cloud infrastructure, into a cloud provider of your choice (for example [AWS](https://aws.amazon.com/)).
