--- a/docs/how-to-guides/ci-cd/workflows.mdx
+++ b/docs/how-to-guides/ci-cd/workflows.mdx
@@ -12,9 +12,37 @@ description: Learn how to establish a CI/CD pipeline for your Webiny project.
 
 :::
 
+:::info
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
+:::
+
 ## Overview
 
 In this guide, we combine all of the concepts we covered in previous [Environments](/docs/how-to-guides/ci-cd/environments), [Version Control](/docs/how-to-guides/ci-cd/version-control), [Managing Cloud Infrastructure Files](/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files), and [Testing](/docs/how-to-guides/ci-cd/testing) articles, in order to establish a complete CI/CD workflow. In case you missed those, we encourage you to check them out first.
+
+Before we continue, please note there are no hard-rules when implementing your own CI/CD workflow. Certainly, there are some best practices, but do note that the workflow we're about to outline here can be modified and adjusted to your needs.
+
+:::info
+
+If you'd like to learn more about the CI/CD practice in general and all of the different phases it consists of, check out the [CI/CD](/docs/key-topics/ci-cd) key topic.
+
+:::
+
+## Release Cycles
+
+Usually, teams deliver new features and fixes within [release cycles](https://en.wikipedia.org/wiki/Software_release_life_cycle).
+
+In other words, in a single release cycle, depending on the priorities and available resources, a number of tasks is assigned to developers, which, ideally, should be completed before the upcoming *release*. When we say the word *release*, we're referring to an event in which we're rolling out all of the planned fixes and features to actual users.
+
+Some teams have biweekly, some weekly, and some even daily release cycles.
+
+Which schedule you choose again depends on available resources and also on the particular project requirements that are in front of you.
+
+In the rest of this article, we don't assume any particular release schedule to be followed. But, in case you're just starting out, we recommend following the weekly release schedule. You can then adjust it along the way, if need be.
+
+## Branches and Environments
 
 ### Long-lived Branches and Environments
 
@@ -40,7 +68,7 @@ For development and testing purposes, developers are also able to create their o
 
 #### Pull Requests (PRs)
 
-If we wanted to make our CI/CD even more robust, upon submitting pull requests (PRs), we could also dynamically create additional short-lived, or sometimes even called *ephemeral*, environments. These enable us to perform automated and even manual tests and ensure that no regressions have been introduced by the changes contained in the submitted PR - before merging the code changes into one of the long-lived branches.
+If we wanted to make our CI/CD even more robust, upon submitting pull requests (PRs), we could also dynamically create additional short-lived, or sometimes even called _ephemeral_, environments. These enable us to perform automated and even manual tests and ensure that no regressions have been introduced by the changes contained in the submitted PR - before merging the code changes into one of the long-lived branches.
 
 Once a PR is closed, these environments are immediately destroyed.
 
@@ -54,28 +82,25 @@ The following diagrams gives us an overview of the explained organization of Git
   src={require("./assets/short_long_lived.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Webiny Cloud Infrastructure - Environments"
+  alt="Organization of Git Branches and Environments"
 />
 
 <!-- vale on -->
 
 With this overview, let's continue by going step-by-step into how everything works together.
 
-## The Workflow
+## Merging / Deployment Strategies
 
-Typically, teams have something called release cycles.
-:::info
-There are no hard-rules when implementing your own CI/CD workflow. Certainly, there are some best practices, but do note that the workflow we're about to explain can be modified and adjusted to your needs.
-:::
-
-### 1. Initial Branching and Submitting Pull Requests (PRs)
+### 1. Initial Branching and Pull Requests (PRs)
 
 Developers start their development process by creating a new branch from the `dev` long-lived branch. Once they feel that a particular feature or a fix they've been working on is ready, they submit a new pull request (PR), where the target branch is again `dev`.
+
+As mentioned above, when a PR is submitted, we want to run different types of tests against a project that was dynamically deployed into a [short-lived (ephemeral)](/docs/how-to-guides/ci-cd/testing#deploying-short-lived-ephemeral-environments-for-testing-purposes) test environment. Once all tests are passing, we can then approve the PR and merge its code changes into the `dev` branch.
 
 <!-- vale off -->
 
 <img
-  src={require("./assets/cicd_1_branches_prs.png").default}
+  src={require("./assets/merging_1.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Webiny Cloud Infrastructure - Environments"
@@ -83,15 +108,24 @@ Developers start their development process by creating a new branch from the `de
 
 <!-- vale on -->
 
-As mentioned above, when a PR is submitted, we want to run different types of tests against a project that was dynamically deployed into a short-lived test environment.
-
-Typically, in a single release cycle, there will be multiple PRs (from different developers) that will need to be merged into the `dev` branch.
-
 ### 2. Merge Changes To `staging` Branch
 
-Once all of the pending PRs have been tested successfully and merged into the `dev` branch, we then merge the `dev` branch into `staging`. At this point, the rest of the team can start manually testing the new release candidate.
+Once all of the pending PRs have been tested successfully and merged into the `dev` branch, we then continue by merging the `dev` branch into `staging`. This can be done either via a new PR or a direct merge, but we recommend the former. This is simply because creating a PR first allows us to maybe [preview the deployment](/docs/how-to-guides/ci-cd/testing#testing-cloud-infrastructure-changes) that will happen once the code is merged, and maybe perform some other tests.
 
-If issues are discovered while testing, we create new PRs that fix them. In terms of their target branch, there are two ways we can go about it.
+<!-- vale off -->
+
+<img
+  src={require("./assets/merging_2.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Webiny Cloud Infrastructure - Environments"
+/>
+
+<!-- vale on -->
+
+As mentioned, merging code into long-lived branches should trigger automatic deploys into their respective long-lived environments. So, once the deploy into the `staging` environment has been completed, the rest of the team, for example product owners or [QA](https://en.wikipedia.org/wiki/Quality_assurance) teams, can start testing the new release candidate.
+
+If issues are discovered while testing, we create new PRs that contain fixes for them, and in terms of their target branch, there are two ways we can go about it.
 
 #### Merge Strategies
 
@@ -99,32 +133,55 @@ If issues are discovered while testing, we create new PRs that fix them. In term
 
 With this approach, a PR is created against the `staging` branch. And, once the tests are passing, we merge the code changes into it.
 
-Note that this means that we now have code changes that exist in `staging` branch, but not in `dev`. So, at the end of the workflow, it's up to us to merge the `staging` branch back into the `dev`.
+Note that this means that we now have code changes that exist in `staging` branch, but not in `dev`. So, at the end of a release cycle, it's important that we sync `staging` and `dev` branches, by merging all of the additional code changes from `staging` branch back into the `dev`.
 
 ##### Choosing `dev` As The Target Branch
 
-Instead of choosing `staging` as the target branch of the PR, we can choose the `dev` branch.
+Instead of choosing `staging` as the target branch of the PR, we can choose `dev`.
 
-This way we don’t have to merge all of the changes after the release is done back to the `dev` branch, but of course, since the code change was merged into `dev` first, you'll need to again merge the `dev` branch into `staging`
+Unlike with the previous approach, here, once the release has been completed, we don’t have to merge all of the changes back into the `dev` branch. But of course, since the code changes from the PR ware merged into `dev`, we'll need to repeat the process of merging the `dev` branch into `staging`.
 
 #### The Recommended Strategy
 
-Our recommendation is to use the first [Choosing `staging` As The Target Branch](/docs/how-to-guides/ci-cd/workflows#choosing-staging-as-the-target-branch) strategy. This is simply because it doesn't *block* the `dev` branch from accepting new code changes, that might be part of the next release cycle.
+Because of the following, our recommendation is to use the first [Choosing `staging` As The Target Branch](/docs/how-to-guides/ci-cd/workflows#choosing-staging-as-the-target-branch) strategy:
 
-### Step 3
+- new fixes and features are frequently merged into the `dev` branch, which can make it unstable
+- at any point in time, we should be able to merge new features, fixes, and even experiments into the `dev` branch
+- merging new code changes into the `dev` branch must not be blocked by any pending release processes
+- with the second approach, there's a risk of having unplanned code changes get merged into the `staging` branch
 
-In the staging branch, if all tests are passing and everything is in order, code is merged into the uat branch, and tested again. If new issues are detected, we are taking a step back, and returning to the staging branch procedure (step 2). So, again, we’re creating new PRs against it, merging it, and again, merging everything to uat.
+### 3. Merge Changes To `prod` Branch
 
-Finally, if everything is in order, the code is merged into the prod branch.
+Once the changes deployed into the `staging` branch have been reviewed and accepted, we then proceed by merging it into the `prod` branch.
 
-## AWS Accounts
+As always, this will trigger automatic deployment of your project, and ultimately, make the new changes available for real users.
 
-In terms of AWS accounts, the usual practice is for each shared environment and developer to have its own AWS account. For easier management, we recommend checking out [AWS Organisations](https://aws.amazon.com/organizations/):
+<!-- vale off -->
 
-> AWS Organizations helps you centrally manage and govern your environment as you grow and scale your AWS resources.
+<img
+  src={require("./assets/merging_3.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Webiny Cloud Infrastructure - Environments"
+/>
 
-As mentioned, the shared environment AWS accounts will mostly be used from your CI/CD pipeline, which we cover in one of the following sections.
+<!-- vale on -->
 
-## More phases, like dev, uat, etc?
+### 4. Hot Fixes
 
-## Testing installation??
+Even with all of the steps and measures described in the steps above, unfortunately, it's still possible for undetected bugs to slip into the production environment.
+
+Some of these may be minor and may not require immediate attention (these can be resolved as part of the next release cycle). But on the other hand, if a bug presents a serious problem and requires immediate attention, then most probably we won't have any other choice but to apply a hot-fix, directly on the `prod` branch.
+
+In other words, in cases like these, it's allowed to break the rules, and either create a PR directly against the `prod` branch, or even directly push into it. Note that, as the long-lived branches are usually marked as protected, only users with admin privileges will be able to do that.
+
+In case you end up doing this, remember that all of the changes you merge into the `prod` branch, should also be merged into the `dev` and `staging` branches. You can do that by simply merging the `prod` branch into `staging`, then merging the `staging` branch back to `dev`.
+
+
+## FAQ
+
+#### Except the `dev`, `staging`, and `prod`, can we have additional long-lived branches and environments as part of our CI/CD workflow?
+
+You certainly can. Just create the needed long-lived branch, and ensure each push to it automatically deploys your project into the respective environment. You will also want to protect it against direct and unauthorized pushes and accidental deletions.
+
+As an example, we've seen users adding an additional `uat` (user acceptance testing) branch and environment, between the `staging` and `prod` environments.
