fix: reorganize articles

--- a/docs/key-topics/ci-cd/environments.mdx
+++ b/docs/key-topics/ci-cd/environments.mdx
@@ -118,11 +118,15 @@ With shared environments, developers deploy their own environments, where, as me
 
 In terms of cloud (AWS) accounts, it has been shown that a good practice to adopt is having a separate account for every shared environment and developer in the organization. For example, if our organization consisted of five developers, with the three `dev`, `staging`, and `prod` shared environments, that would be eight cloud accounts in total.
 
-For easier management, we recommend checking out [AWS Organizations](https://aws.amazon.com/organizations/):
-
-> AWS Organizations helps you centrally manage and govern your environment as you grow and scale your AWS resources.
-
+:::info
 The shared environments AWS accounts will mostly be used from your CI/CD pipeline, which we cover in one of the following sections.
+:::
+
+:::tip
+For easier management of AWS accounts, we recommend checking out [AWS Organizations](https://aws.amazon.com/organizations/), which is a feature that helps you centrally manage and govern your environment as you grow and scale your AWS resources.
+
+Furthermore, the [Organizing Your AWS Environment Using Multiple Accounts](https://docs.aws.amazon.com/whitepapers/latest/organizing-your-aws-environment/organizing-your-aws-environment.html) article is also something that provides useful information on the multiple AWS accounts for different environments approach.
+:::
 
 ## FAQ
 
