--- a/docs/key-topics/ci-cd/introduction.mdx
+++ b/docs/key-topics/ci-cd/introduction.mdx
@@ -1,19 +1,41 @@
 ---
-id: ci-cd
-title: CI/CD
-sidebar_label: CI/CD
-keywords: ["webiny", "continuous", "integration", "delivery"]
-description: Learn how to establish a CI/CD pipeline for your Webiny project.
+id: introduction
+title: Introduction
+sidebar_label: Introduction
+keywords:
+  ["ci", "cd", "development", "workflows", "introduction", "serverless", "cloud", "infrastructure"]
+description: Introduction to CI/CD.
 ---
 
 :::tip What you'll learn
-- what does CI/CD mean
+
+- what is CI/CD
 - get an overview of different CI/CD phases
+
 :::
 
 :::info
-This article contains a more general information on what CI/CD is and its main phases. For more practical information and tips on how to set up a CI/CD workflow for your Webiny project, check out the [CI/CD](/docs/how-to-guides/ci-cd/introduction) how-to guides.
+
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+
 :::
+
+## Overview
+
+The process of application development is much more than just writing application code. It entails several different subprocesses, which are equally, if not more, important. For example:
+
+- testing
+- deployment into multiple environments
+- organizing code in multiple VCS branches
+- choosing the right cloud infrastructure resources for the job
+- storing and managing cloud infrastructure state files
+- security
+- monitoring and observability <!-- (https://thenewstack.io/monitoring-vs-observability-whats-the-difference/) -->
+- team organization
+
+In the following sections, we cover some of these subprocesses and provide best practices around how to structure and implement them, within your CI/CD workflow.
+
+For starters, we give a quick introduction on what CI/CD is and what are its different phases.
 
 ## What is CI/CD?
 
@@ -26,7 +48,7 @@ Note that the **CD** abbreviation can also stand for **continuous delivery**, wh
 > Continuous delivery is the ability to deliver software that can be deployed at any time through manual releases; this is in contrast to continuous deployment which uses automated deployments.
 
 :::info
-In the rest of this guide, when mentioning the **CD** abbreviation, we're explicitly referring to the **continuous deployment**.
+In the rest of this key topics section, when mentioning the **CD** abbreviation, we're explicitly referring to the **continuous deployment**.
 :::
 
 ## Different Phases
@@ -36,7 +58,7 @@ In general, the CI/CD workflow, sometimes also referred to as a release cycle, c
 <!-- vale off -->
 
 <img
-  src={require("./assets/ci-cd/cicd_infinity.png").default}
+  src={require("./assets/cicd_infinity.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="CI/CD Phases"
