--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -148,6 +148,10 @@ Notice how state files are organized per project application:
 - `apps/admin` - **Admin Area** project application's cloud infrastructure state files
 - `apps/website` - **Website** project application's cloud infrastructure state files
 
+:::tip
+Learn more about how to store cloud in state in CI/CD in the [Cloud Infrastructure State Files](/docs/key-topics/ci-cd/cloud-infrastructure-state-files) key topic.
+:::
+
 ## Different Backends
 
 As mentioned, by default, Pulumi state files are stored in your project application folder, inside the `.pulumi` folder. While in some cases, storing them locally may work for you, in others, you may want to store these in a controlled, centralized, remote storage.
